--- a/.travis.yml
+++ b/.travis.yml
@@ -31,6 +31,8 @@ env:
  matrix:
   - DB=mysqli MOODLE_BRANCH=master
   - DB=pgsql  MOODLE_BRANCH=master
+  - DB=mysqli MOODLE_BRANCH=MOODLE_36_STABLE
+  - DB=pgsql  MOODLE_BRANCH=MOODLE_36_STABLE
   - DB=mysqli MOODLE_BRANCH=MOODLE_35_STABLE
   - DB=pgsql  MOODLE_BRANCH=MOODLE_35_STABLE
   - DB=mysqli MOODLE_BRANCH=MOODLE_34_STABLE
