--- a/.travis.yml
+++ b/.travis.yml
@@ -15,8 +15,7 @@ addons:
   postgresql: "9.4"
   apt:
     packages:
-      - oracle-java8-installer
-      - oracle-java8-set-default
+      - openjdk-8-jre-headless
 
 cache:
   directories:
@@ -27,6 +26,7 @@ php:
  - 7.0
  - 7.1
  - 7.2
+ - 7.3
 env:
  matrix:
   - DB=mysqli MOODLE_BRANCH=master
@@ -42,7 +42,7 @@ before_install:
   - nvm install 8.9
   - nvm use 8.9
   - cd ../..
-  - composer create-project -n --no-dev --prefer-dist moodlerooms/moodle-plugin-ci ci ^2
+  - composer create-project -n --no-dev --prefer-dist blackboard-open-source/moodle-plugin-ci ci ^2
   - export PATH="$(cd ci/bin; pwd):$(cd ci/vendor/bin; pwd):$PATH"
 
 install:
