--- a/.travis.yml
+++ b/.travis.yml
@@ -23,7 +23,6 @@ cache:
     - $HOME/.npm
 
 php:
- - 7.0
  - 7.1
  - 7.2
  - 7.3
@@ -31,11 +30,14 @@ env:
  matrix:
   - DB=mysqli MOODLE_BRANCH=master
   - DB=pgsql  MOODLE_BRANCH=master
+  - DB=mysqli MOODLE_BRANCH=MOODLE_38_STABLE
+  - DB=pgsql  MOODLE_BRANCH=MOODLE_38_STABLE
+  - DB=mysqli MOODLE_BRANCH=MOODLE_37_STABLE
+  - DB=pgsql  MOODLE_BRANCH=MOODLE_37_STABLE
   - DB=mysqli MOODLE_BRANCH=MOODLE_36_STABLE
   - DB=pgsql  MOODLE_BRANCH=MOODLE_36_STABLE
   - DB=mysqli MOODLE_BRANCH=MOODLE_35_STABLE
   - DB=pgsql  MOODLE_BRANCH=MOODLE_35_STABLE
-  - DB=mysqli MOODLE_BRANCH=MOODLE_34_STABLE
 
 before_install:
   - phpenv config-rm xdebug.ini
