--- a/.travis.yml
+++ b/.travis.yml
@@ -22,10 +22,13 @@ php:
  - 7.1
  - 7.2
  - 7.3
+ - 7.4
 env:
  matrix:
   - DB=mysqli MOODLE_BRANCH=master
   - DB=pgsql  MOODLE_BRANCH=master
+  - DB=mysqli MOODLE_BRANCH=MOODLE_310_STABLE
+  - DB=pgsql  MOODLE_BRANCH=MOODLE_310_STABLE
   - DB=mysqli MOODLE_BRANCH=MOODLE_39_STABLE
   - DB=pgsql  MOODLE_BRANCH=MOODLE_39_STABLE
   - DB=mysqli MOODLE_BRANCH=MOODLE_38_STABLE
@@ -39,12 +42,9 @@ env:
 
 before_install:
   - phpenv config-rm xdebug.ini
-  - nvm install 14.2.0
-  - nvm use 14.2.0
   - cd ../..
-  - composer create-project -n --no-dev --prefer-dist blackboard-open-source/moodle-plugin-ci ci ^2
+  - composer create-project -n --no-dev --prefer-dist moodlehq/moodle-plugin-ci ci ^3
   - export PATH="$(cd ci/bin; pwd):$(cd ci/vendor/bin; pwd):$PATH"
-  - docker run -d -p 127.0.0.1:4444:4444 --net=host -v /dev/shm:/dev/shm selenium/standalone-firefox:3
 
 install:
   - moodle-plugin-ci install
@@ -58,5 +58,6 @@ script:
   - moodle-plugin-ci savepoints
   - moodle-plugin-ci mustache
   - moodle-plugin-ci grunt
+  - moodle-plugin-ci phpdoc
   - moodle-plugin-ci phpunit
   - moodle-plugin-ci behat
